--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,13 +48,13 @@ jobs:
       fail-fast: false
       matrix:
         node-version: ['10', '12']
-        python-version: [3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Node
+    - name: Install Node ${{ matrix.node-version}}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version}}
