--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,31 @@
 include LICENSE
 include README.md
 include requirements*.txt
+
 include setupbase.py
-include *.json
-include *.js
-recursive-include src *.ts
+
+include tsconfig.json
+include package.json
+include webpack.config.js
+include widget_periodictable/labextension/*.tgz
+
+# Examples
+graft examples
+
+# Tests
+graft tests
+prune tests/build
+
+# Javascript files
+graft widget_periodictable/nbextension
+graft src
+prune **/node_modules
+prune coverage
+prune lib
+
+# Patterns to exclude from any directory
+global-exclude *~
+global-exclude *.pyc
+global-exclude *.pyo
+global-exclude .git
+global-exclude .ipynb_checkpoints
