--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,12 +66,12 @@ jobs:
 
     - name: Check build and installation of PyPI source distribution
       env:
-        SDIST_DIR: sdist_action
+        BDIST_DIR: bdist_action
       run: |
-        python setup.py -v sdist -d ${SDIST_DIR}
-        SDIST_FILE=$( ls ${SDIST_DIR}/ )
+        python setup.py -v bdist -d ${BDIST_DIR}
+        BDIST_FILE=$( ls ${BDIST_DIR}/ )
         ORIGINAL_PWD=$(pwd)
 
         mkdir -p /tmp/installation_dir
         cd /tmp/installation_dir
-        pip install ${ORIGINAL_PWD}/${SDIST_DIR}/${SDIST_FILE}
+        pip install ${ORIGINAL_PWD}/${BDIST_DIR}/${BDIST_FILE}
