--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,34 +44,31 @@ jobs:
   build-package:
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: ['10', '12']
-        python-version: [3.6, 3.7, 3.8, 3.9]
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Node ${{ matrix.node-version}}
+    - name: Install Node 13
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version}}
+        node-version: '13.x'
 
-    - name: Set up Python ${{ matrix.python-version}}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version}}
+        python-version: 3.9
+
+    - name: Install Python requirements
+      run: pip install -r requirements.txt
 
     - name: Check build and installation of PyPI source distribution
       env:
-        BDIST_DIR: bdist_action
+        SDIST_DIR: sdist_action
       run: |
-        python setup.py -v bdist -d ${BDIST_DIR}
-        BDIST_FILE=$( ls ${BDIST_DIR}/ )
+        python setup.py -v sdist -d ${SDIST_DIR}
+        SDIST_FILE=$( ls ${SDIST_DIR}/ )
         ORIGINAL_PWD=$(pwd)
 
         mkdir -p /tmp/installation_dir
         cd /tmp/installation_dir
-        pip install ${ORIGINAL_PWD}/${BDIST_DIR}/${BDIST_FILE}
+        pip install ${ORIGINAL_PWD}/${SDIST_DIR}/${SDIST_FILE}
