--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,19 +44,25 @@ jobs:
   build-package:
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ['10', '13']
+        python-version: [3.6, 3.9]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Node 13
+    - name: Install Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: '13.x'
+        node-version: ${{ matrix.node-version }}
 
-    - name: Set up Python 3.9
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
 
     - name: Install Python requirements
       run: pip install -r requirements.txt
