--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -16,15 +16,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Node 13
+      uses: actions/setup-node@v1
+      with:
+        node-version: '13'
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
 
-    - name: Update setuptools
+    - name: Update setuptools and install requirements
       run: |
         python -m pip install --upgrade pip
         pip install -U setuptools
+        pip install -r requirements.txt
 
     - name: Update version and tag
       run: .github/static/update_version.sh
