--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "watch:nbextension": "webpack --watch"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.2.0 || ^2 || ^3",
+    "@jupyter-widgets/base": "^1.2.0 || ^2 || ^3 || ^4",
     "@jupyter-widgets/controls": "^1.5.0 || ^2 || ^3"
   },
   "devDependencies": {
