--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,14 +70,29 @@ jobs:
     - name: Check build and installation of PyPI source distribution
       env:
         SDIST_DIR: sdist_action
+        BDIST_DIR: bdist_action
       run: |
-        python setup.py -v sdist -d ${SDIST_DIR}
+        python setup.py -v sdist -d ${SDIST_DIR} bdist_wheel -d ${BDIST_DIR}
         SDIST_FILE=$( ls ${SDIST_DIR}/ )
-        ORIGINAL_PWD=$(pwd)
+        echo "BDIST_FILE=$( ls ${BDIST_DIR}/ )" >> $GITHUB_ENV
+        echo "ORIGINAL_PWD=$(pwd)"" >> $GITHUB_ENV
 
         mkdir -p /tmp/installation_dir
         cd /tmp/installation_dir
-        pip install ${ORIGINAL_PWD}/${SDIST_DIR}/${SDIST_FILE}
+        pip install ${{ env.ORIGINAL_PWD }}/${SDIST_DIR}/${SDIST_FILE}
+
+    - name: Assert nbextension installed correctly
+      run: ./.github/static/check_nbextensions.py
+
+    - name: Re-install wheel
+      env:
+        BDIST_DIR: bdist_action
+      run: |
+        pip uninstall -y ipywidgets-extended
+
+        mkdir -p /tmp/installation_dir
+        cd /tmp/installation_dir
+        pip install ${{ env.ORIGINAL_PWD }}/${BDIST_DIR}/${{ env.BDIST_FILE }}
 
     - name: Assert nbextension installed correctly
       run: ./.github/static/check_nbextensions.py
