--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install Python requirements
-      run: pip install -r requirements.txt
+      run: |
+        python -m pip install -U pip
+        pip install -U setuptools wheel
+        pip install -r requirements.txt
 
     - name: Check build and installation of PyPI source distribution
       env:
