--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,11 +78,11 @@ jobs:
         python setup.py -v sdist -d ${SDIST_DIR} bdist_wheel -d ${BDIST_DIR}
         SDIST_FILE=$( ls ${SDIST_DIR}/ )
         echo "BDIST_FILE=$( ls ${BDIST_DIR}/ )" >> $GITHUB_ENV
-        echo "ORIGINAL_PWD=$(pwd)" >> $GITHUB_ENV
+        ORIGINAL_PWD=$(pwd)
 
         mkdir -p /tmp/installation_dir
         cd /tmp/installation_dir
-        pip install ${{ env.ORIGINAL_PWD }}/${SDIST_DIR}/${SDIST_FILE}
+        pip install ${ORIGINAL_PWD}/${SDIST_DIR}/${SDIST_FILE}
 
     - name: Assert nbextension installed correctly
       run: ./.github/static/check_nbextensions.py
@@ -97,9 +97,12 @@ jobs:
       env:
         BDIST_DIR: bdist_action
       run: |
+        ORIGINAL_PWD=$(pwd)
+
+        if [ "${ORIGINAL_PWD}" == "/tmp/installation_dir" ]; then; echo "Wrong original dir: ${ORIGINAL_PWD}"; exit 1; fi
         mkdir -p /tmp/installation_dir
         cd /tmp/installation_dir
-        pip install ${{ env.ORIGINAL_PWD }}/${BDIST_DIR}/${{ env.BDIST_FILE }}
+        pip install ${ORIGINAL_PWD}/${BDIST_DIR}/${{ env.BDIST_FILE }}
 
     - name: Assert nbextension installed correctly
       run: ./.github/static/check_nbextensions.py
