--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Update setuptools and install requirements
       run: |
         python -m pip install --upgrade pip
-        pip install -U setuptools
+        pip install -U setuptools wheel
         pip install -r requirements.txt
 
     - name: Update version and tag
