--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 20
-  target-branch: develop
+  target-branch: main
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
-  target-branch: develop
+  target-branch: main
