--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ipywidgets-extended",
   "version": "1.1.1",
-  "description": "Extensions to the Jupyter Widgets in the 'ipywidgets' pacakge.",
+  "description": "Extensions to the Jupyter Widgets in the 'ipywidgets' package.",
   "keywords": [
     "jupyter",
     "widgets"
