--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include setupbase.py
 include tsconfig.json
 include package.json
 include webpack.config.js
+include nbextension/static/*.*js
 include ipywidgets_extended/labextension/*.tgz
 
 # Examples
