--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "npm run build:lib && npm run build:nbextension",
     "build:labextension": "npm run clean:labextension && mkdirp ipywidgets_extended/labextension && cd ipywidgets_extended/labextension && npm pack ../..",
     "build:lib": "tsc",
-    "build:nbextension": "webpack -p",
+    "build:nbextension": "webpack",
     "build:all": "npm run build:labextension && npm run build:nbextension",
     "clean": "npm run clean:lib && npm run clean:nbextension",
     "clean:lib": "rimraf lib",
@@ -55,28 +55,28 @@
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.6",
-    "@types/webpack-env": "^1.13.6",
+    "@types/webpack-env": "^1.16.3",
     "css-loader": "^3.2.0",
     "expect.js": "^0.3.1",
     "fs-extra": "^7.0.0",
-    "karma": "^3.0.0",
+    "jquery": "^3.5.1",
+    "karma": "^6.3.7",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^3.0.13",
+    "karma-typescript": "^5.5.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.2.0",
+    "mocha": "^9.1.3",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
-    "ts-loader": "^5.2.1",
+    "ts-loader": "^9.2.6",
     "typescript": "~3.8",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "jquery": "^3.5.1"
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1"
   },
   "jupyterlab": {
     "extension": "lib/plugin"
