--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+  rev: v4.2.0
   hooks:
   - id: check-yaml
   - id: check-json
@@ -8,7 +8,7 @@ repos:
     exclude: README.md
 
 - repo: https://github.com/ambv/black
-  rev: 21.12b0
+  rev: 22.3.0
   hooks:
   - id: black
     name: Blacken
