--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "watch:nbextension": "webpack --watch"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.2.0 || ^2 || ^3 || ^4",
-    "@jupyter-widgets/controls": "^1.5.0 || ^2 || ^3"
+    "@jupyter-widgets/base": "^1.2.0 || ^2 || ^3 || ^4 || ^5 || ^6",
+    "@jupyter-widgets/controls": "^1.5.0 || ^2 || ^3 || ^4"
   },
   "devDependencies": {
-    "@phosphor/application": "^1.6.0",
-    "@phosphor/widgets": "^1.6.0",
+    "@lumino/application": "^1.6.0",
+    "@lumino/widgets": "^1.6.0",
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.6",
