--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.2.0
+  rev: v4.4.0
   hooks:
   - id: check-yaml
   - id: check-json
@@ -8,13 +8,13 @@ repos:
     exclude: README.md
 
 - repo: https://github.com/ambv/black
-  rev: 22.3.0
+  rev: 22.12.0
   hooks:
   - id: black
     name: Blacken
 
-- repo: https://gitlab.com/pycqa/flake8
-  rev: '3.9.2'
+- repo: https://github.com/pycqa/flake8
+  rev: '6.0.0'
   hooks:
   - id: flake8
     args: [--count, --show-source, --statistics]
